# rust-fast-search

./: Cargo.toml  README.md
public/: index.html
public/static/js/: Application.js  EnterKey.js  init.js
src/: error.rs  main.rs  options.rs  server.rs
src/config/: mod.rs  validate.rs
src/handler/: fields.rs  mod.rs  search.rs  util.rs
src/index/: error.rs  mod.rs
src/parser/: error.rs  mod.rs
src/worker/: error.rs  mod.rs  postgres.rs
